--- a/htmls/event/falls.html
+++ b/htmls/event/falls.html
@@ -68,7 +68,7 @@
 				<div class="thumbnail">
 					<h3>
 						{% if e.has_key('href') %}<a target="_blank" href="{{e['href']}}">{% else %}<a href="/event/{{e['id']}}/">{% end %}
-							{{e['title']}}
+							{{e['title']}}<i style="font-size:10px;color:#CCCCCC;">({{e['date']}})</i>
 						</a>
 					</h3>
 					{% if e.has_key('href') %}
@@ -77,7 +77,7 @@
 						<a style="background:#EDEDED;" href="/event/{{e['id']}}"><img src="/image/attach/{{e['logo']}}_300"/>
 					{% end %}
 						</a>
-					<ul class="caption unstyled">
+					<ul class="caption unstyled" style="color:grey;">
 						{% if e['tl'][0] %}<li>{{e['tl'][0]}}</li>{% end %}
 						<li><a href="/event/{{e['id']}}/">{{e['tl'][1]}}</a></li>
 						{% if e['tl'][2] %}<li>{{e['tl'][2]}}</li>{% end %}
