--- a/htmls/box102.html
+++ b/htmls/box102.html
@@ -11,6 +11,7 @@
 		<script src="{{ static_url('js/jquery.own.js') }}" type="text/javascript"></script>
 		{% block static %}{% end %}
 		<link href="{{ static_url('css/bootstrap.css') }}" rel="stylesheet">
+		<link href="{{ static_url('css/mybootstrap.css') }}" rel="stylesheet">
 		<link href="{{ static_url('css/doc.css') }}" rel="stylesheet">
 		<link rel="shortcut icon" href="./favicon.ico">
 	</head>
