--- a/htmls/note/write.html
+++ b/htmls/note/write.html
@@ -3,6 +3,9 @@
 {% block static %}
 	<script type="text/javascript" src="{{ static_url('js/jquery.note.js') }}"></script>
 	<script language="javascript" src="{{ static_url('js/jquery.uploadify.min.js') }}" type="text/javascript"></script>
+	<script language="javascript" src="{{ static_url('js/jquery-ui.min.js') }}" type="text/javascript"></script>
+	<script language="javascript" src="{{ static_url('js/jquery.tags.js') }}" type="text/javascript"></script>
+	<script language="javascript" src="{{ static_url('js/tags.js') }}" type="text/javascript"></script>
 	<script language="javascript" type="text/javascript">
 		$(document).ready(function() {
 			$('#nav-note').addClass("active");
@@ -17,18 +20,38 @@
 				onUploadSuccess : function (file, data, response) {
 					var pic_num = $("#thumbnails li").length+1;
 					var pic_name = " 图:"+pic_num+" ";
-					$('#thumbnails').append('<li id="pic'+pic_num+'" class="span3 bg-white"><div class="thumbnail" style="min-height:100px;"><div style="float:left; clear:right;margin-right:10px;"><img src="/image/attach/'+data+'" style="width:80px;height:80px;margin-bottom:5px;" width=100 height=100 /></div><div class="span1" style="margin:10px 10px;display:block;width:100px;"><a rel="'+pic_num+'" href="" onclick="yhui.iNote.delPic(this);return false;">删除</a><p class="pull-right">'+pic_name+'</p></div><br/><br/><br/><label class="radio inline" style="margin-left:5px;"><input type="radio" name="pos'+pic_num+'" id="RadioLeft" value="-1">左</label><label class="radio inline" style="margin-left:5px;"><input type="radio" name="pos'+pic_num+'" id="RadioMiddle" value="0" checked>中</label><label class="radio inline" style="margin-left:5px;"><input type="radio" name="pos'+pic_num+'" id="RadioRight" value="1">右</label><textarea style="width:200px;"></textarea></div></li>');
+					$('#thumbnails').append('<li id="pic'+pic_num+'" class="span3 bg-white"><div class="thumbnail" style="min-height:100px;"><div style="float:left; clear:right;margin-right:10px;"><img src="/image/attach/'+data+'" style="width:80px;height:80px;margin-bottom:5px;" width=100 height=100 /></div><div class="span1" style="margin:10px 10px;display:block;width:100px;"><a rel="'+pic_num+'" href="" onclick="yhui.iNote.delPic(this);return false;">删除</a><p class="pull-right">'+pic_name+'</p></div><br/><br/><br/><label class="radio inline" style="margin-left:5px;"><input type="radio" name="pos'+pic_num+'" value="-1">左</label><label class="radio inline" style="margin-left:5px;"><input type="radio" name="pos'+pic_num+'" value="0" checked>中</label><label class="radio inline" style="margin-left:5px;"><input type="radio" name="pos'+pic_num+'" value="1">右</label><textarea style="width:200px;"></textarea></div></li>');
 					var note_text = $('#note_text').val()+pic_name;
 					$('#note_text').val(note_text).focus();
 					$('#image').modal('hide');
 				},
 				onError			: function (event, queueID, fileObj){alert("文件:" + fileObj.name + " 上传失败");}
 			});
+			yhui.iTag.create($('#ntag'), {
+				id:'noteTags',
+				eclass: 'span3',
+				initTags: false,
+				addedAble: false,
+				editAble: true,
+				tagSource:function(search, showChoices) {
+					var that = this;
+					var args = {'search': search.term};
+					$.postJSON("/a/tag/list/", 'GET', args, function(response) {
+						if (response.error){
+							return alert(response.error);
+						}
+						showChoices(that._subtractArray(response.data, that.assignedTags()));
+					});
+				}
+			});
 			yhui.iNote.init();
 		})
 	</script>
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/note.css') }}"/>
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/uploadify.css') }}"/>
+	<link rel="stylesheet" type="text/css" href="{{ static_url('css/jquery-ui.css') }}"/>
+	<link rel="stylesheet" type="text/css" href="{{ static_url('css/jquery.tags.css') }}"/>
+	<link rel="stylesheet" type="text/css" href="{{ static_url('css/tagit.ui-zendesk.css') }}"/>
 {% end %}
 {% block bodyleft %}
 <form id="form_note" method="post" action="/note/write/">
@@ -81,7 +104,8 @@
 </div>
 {% end %}
 {% block bodyright %}
-	<input type="text" data-provide="typeahead" class="hide"/>
+	<h3>游记标签:</h3>
+	<div id="ntag"></div>
 	<ul id="thumbnails" class="thumbnails"></ul>
 {% end %}
 
