fix bug about note

--- a/htmls/note/index.html
+++ b/htmls/note/index.html
@@ -21,6 +21,7 @@
 			<div id="{{ n['id'] }}" class="accordion-body collapse" style="height: 0px;">
 				<div class="accordion-inner">
 					{{ n['content'] }}
+					<div style="clear:both;"></div>
 				</div>
 			</div>
 		</div>
