fix bug about push user

--- a/htmls/profile/setting.html
+++ b/htmls/profile/setting.html
@@ -11,6 +11,7 @@
 				buttonText		: '点击上传',
 				cancelImage		: '{{ static_url("img/uploadify-cancel.png") }}',
 				auto			: true,
+				debug			: true, 
 				scriptData		: {'uid':'{{ uid }}'},
 				fileObjName		: 'upload',
 				onUploadSuccess : function (file, data, response) {
