--- a/htmls/check/tag.html
+++ b/htmls/check/tag.html
@@ -7,6 +7,7 @@
 	<script language="javascript" src="{{ static_url('js/jquery-ui.min.js') }}" type="text/javascript"></script>
 	<script language="javascript" src="{{ static_url('js/jquery.tags.js') }}" type="text/javascript"></script>
 	<script language="javascript" src="{{ static_url('js/tags.js') }}" type="text/javascript"></script>
+	<script language="javascript" src="{{ static_url('js/jquery.pagination.js') }}" type="text/javascript"></script>
 	<script language="javascript" type="text/javascript">
 		$(document).ready(function() {
 			yhui.iTag.create($('#stagList'), {
@@ -16,9 +17,10 @@
 				panelControl:true,
 				addedAble:false,
 				editAble:false,
+				pageAble:true,
 				relations:$('.tabbable .active a').attr('href').replace('#', ''),
 				onTagClicked: function(evt, tag) {
-					window.location.href = '/tag/'+$(tag).attr('id');
+					alert($(tag).attr('id'));
 				},
 			});
 			yhui.iTag.create($('#etag'), {
@@ -45,6 +47,7 @@
 				yhui.iTag.tab({
 					id:'siteTags', 
 					relations: $('.tabbable .active a').attr('href').replace('#', ''),
+					page:1,
 				});
 			});
 		})
@@ -62,7 +65,7 @@
 	</ul>
 </div>
 <div id="stagList"></div>
-<div id="utagList"></div>
+<div id="tpage" render-data-panel="stagList" class="pagination pull-right"></div>
 <div id="etag"></div>
 {% end %}
 {% block bodyright %}
