fix bug about note

--- a/htmls/check/index.html
+++ b/htmls/check/index.html
@@ -31,6 +31,7 @@
 		<li class="active"><a>网站审核</a></li>
 		<li><a href="/check/event/">活动审核</a></li>
 		<li><a href="/check/tag/">标签管理</a></li>
+		<li><a href="/check/note/">游记管理</a></li>
 		<li style="display:none;"><a href="/check/people/">驴友审核</a></li>
 		<li style="display:none;"><a href="/check/weibo/">微博审核</a></li>
 		<li style="display:none;"><a href="/check/club/">俱乐部审核</a></li>
