--- a/htmls/check/tag.html
+++ b/htmls/check/tag.html
@@ -74,6 +74,7 @@
 		{% if verify(pm, 0x01) %}<li><a href="/check/">网站审核</a></li>{% end %}
 		<li><a href="/check/event/">活动审核</a></li>
 		<li class="active"><a>标签管理</a></li>
+		<li><a href="/check/note/">游记管理</a></li>
 		<li style="display:none;"><a href="/check/people/">驴友审核</a></li>
 		<li style="display:none;"><a href="/check/weibo/">微博审核</a></li>
 		<li style="display:none;"><a href="/check/club/">俱乐部审核</a></li>
