--- a/htmls/note/index.html
+++ b/htmls/note/index.html
@@ -20,7 +20,7 @@
 			</div>
 			<div id="{{ n['id'] }}" class="accordion-body collapse" style="height: 0px;">
 				<div class="accordion-inner">
-					{{ n['content'] }}
+					<div class="p">{{ n['content'] }}</div>
 					<div class="clear"></div>
 					<div class="pull-right"><a target="_blank" href="/note/{{ n['id'] }}/">评论</a></div>
 					<div class="clear"></div>
