--- a/htmls/note/write.html
+++ b/htmls/note/write.html
@@ -20,7 +20,7 @@
 				onUploadSuccess : function (file, data, response) {
 					var pic_num = $("#thumbnails li").length+1;
 					var pic_name = " 图:"+pic_num+" ";
-					$('#thumbnails').append('<li id="pic'+pic_num+'" class="span3 bg-white"><div class="thumbnail" style="min-height:100px;"><div style="float:left; clear:right;margin-right:10px;"><img src="/image/attach/'+data+'" style="width:80px;height:80px;margin-bottom:5px;" width=100 height=100 /></div><div class="span1" style="margin:10px 10px;display:block;width:100px;"><a rel="'+pic_num+'" href="" onclick="yhui.iNote.delPic(this);return false;">删除</a><p class="pull-right">'+pic_name+'</p></div><br/><br/><br/><label class="radio inline" style="margin-left:5px;"><input type="radio" name="pos'+pic_num+'" value="-1">左</label><label class="radio inline" style="margin-left:5px;"><input type="radio" name="pos'+pic_num+'" value="0" checked>中</label><label class="radio inline" style="margin-left:5px;"><input type="radio" name="pos'+pic_num+'" value="1">右</label><textarea style="width:200px;"></textarea></div></li>');
+					yhui.iNote.insertPic('PIC', data, '');
 					var note_text = $('#note_text').val()+pic_name;
 					$('#note_text').val(note_text).focus();
 					$('#image').modal('hide');
@@ -28,7 +28,7 @@
 				onError			: function (event, queueID, fileObj){alert("文件:" + fileObj.name + " 上传失败");}
 			});
 			yhui.iTag.create($('#ntag'), {
-				id:'noteTags',
+				id: 'noteTags',
 				eclass: 'span3',
 				initTags: false,
 				addedAble: false,
@@ -44,7 +44,7 @@
 					});
 				}
 			});
-			yhui.iNote.init();
+			yhui.iNote.init('{{ id }}');
 		})
 	</script>
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/note.css') }}"/>
@@ -57,7 +57,7 @@
 <form id="form_note" method="post" action="/note/write/">
 	<div class="control-group">
 		<label>题目:</label>
-		<div><input id="note_title" name="note_title" type="text" class="span9"/></div>
+		<div><input id="note_title" name="note_title" type="text" class="span9" /></div>
 	</div>
 	<div class="control-group">
 		<label class="pull-left">正文:</label>
@@ -71,7 +71,7 @@
 	<div class="">
 		<a id="cancel_note" class="btn pull-left" href="/note/">取消</a>
 		<input id="publish_note" class="btn btn-success pull-right" style="margin-left:10px;" value="发表" type="submit" name="note_submit" />
-		<input id="preview_note" class="btn pull-right" value="预览" type="button" />
+		<input id="preview_note" class="btn pull-right hide" value="预览" type="button" />
     </div>
 </form>
 
