--- a/htmls/weibo/index.html
+++ b/htmls/weibo/index.html
@@ -20,7 +20,7 @@
 			<input type="submit" class="btn-large" value="发布" style="margin-top:5px;margin-left:20px;">
 			<input type="hidden" name="_xsrf" value="ca61c7cf01cf4097bd14c959c519637a">
 		</form><br/><hr/>
-		<div class="wb_items" she="" maintype="" subtype="">
+		<div class="wb_items" she="" maintype="" subtype="" kind="weibo">
 			<div id="wb_bottom" class="bottom wb_item">
 				<a href="#" style="display:block;text-align:center;" onclick="Weibo.extend(this);return false;"></a>
 				<input type="hidden" value="0">
