--- a/htmls/event/publish_step_one.html
+++ b/htmls/event/publish_step_one.html
@@ -6,6 +6,7 @@
 	<script language="javascript" src="{{ static_url('js/jquery-ui.min.js') }}" type="text/javascript"></script>
 	<script language="javascript" src="{{ static_url('js/jquery.tags.js') }}" type="text/javascript"></script>
 	<script language="javascript" src="{{ static_url('js/tags.js') }}" type="text/javascript"></script>
+	<script language="javascript" src="{{ static_url('js/jquery.grid.js') }}" type="text/javascript"></script>
 	<script language="javascript" type="text/javascript">
 		$(document).ready(function() {
 			$('#nav-event').addClass("active");
@@ -18,7 +19,7 @@
 				auto			: true,
 				fileObjName		: 'upload',
 				onUploadSuccess : function (file, data, response) {
-					$('#poster').html('<span><input type="hidden" name="logo" value="'+data+'"/>已上传</span>');
+					$('#poster-disp').html('<span><input type="hidden" name="logo" value="'+data+'"/><img width=100 height=100 src="/image/attach/'+data+'_300"></span>');
 					$('#poster_queue').hide();
 					},
 				onError			: function (event, queueID, fileObj){alert("文件:" + fileObj.name + " 上传失败");}
@@ -26,6 +27,11 @@
 			Event.checka();
 			$("input[rel=popover]").popover({trigger: 'focus'});
 			$("textarea[rel=popover]").popover({trigger: 'focus', placement: 'top'});
+			yhui.iGrid.createGrid($("#egrid"), {
+				id:"egrid", 
+				max_row: 5,
+				values: ["发起人", "{{current_user}}"]
+			});
 			yhui.iTag.create($('#etag'), {
 				id:'eventTags',
 				eclass: 'span6',
@@ -106,6 +112,12 @@
 					$("#equipHelpTags").tagit('removeTag', tag);
 				}
 			});
+			$('#editor').on('hidden', function () {
+				var ts = $(this).find("textarea").map(function() {
+					return $(this).val();
+					}).get();
+				$("textarea[name='schedule_tl']").val(ts.join("\n\n"));
+			});
 		})
 	</script>
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/uploadify.css') }}"/>
@@ -127,13 +139,13 @@
 			<div class="control-group">
 				<label class="control-label" for="focusedInput">宣传海报:</label>
 				<div class="controls">
-					<div id="poster">图片上传</div>
+					<div id="poster" >图片上传</div><div id="poster-disp" class="pull-left"></div>
 				</div>
 			</div>
 			<div class="control-group">
 				<label class="control-label">人员配置:</label>
 				<div class="controls">
-					<input name="members" class="input-xlarge" type="text" value="发起人：{{current_user}}">
+					<div id="egrid"></div>
 				</div>
 			</div>
 			<div class="control-group">
@@ -170,21 +182,24 @@
 				</div>
 			</div>
 			<div class="control-group">
-				<label class="control-label" for="focusedInput">活动时间:</label>
-				<div class="controls">
-					<script>toggleDate("begin_time", 0,0,0)</script>
-				</div>
-			</div>
-			<div class="control-group">
 				<label class="control-label" for="focusedInput">活动地点:</label>
 				<div class="controls">
 					<input class="input-xlarge" name="place" type="text" value="" rel="popover" data-content="天南海北，海角天涯 天荒地老 海枯石烂 看着办吧！" data-original-title="施主自哪里来，往“哪里”去？">
 				</div>
 			</div>
 			<div class="control-group">
+				<label class="control-label" for="focusedInput">活动时间:</label>
+				<div class="controls">
+					<script>toggleDate("begin_time", 0,0,0)</script>
+					<div class="input-prepend input-append">
+						<span class="add-on">历时</span><input class="span1" name="day" type="text" value="1"><span class="add-on">天</span>
+					</div>
+				</div>
+			</div>
+			<div class="control-group">
 				<label class="control-label" for="textarea">行程安排:</label>
 				<div class="controls">
-					<textarea class="input-xlarge" name="schedule_tl" rows="3" style="width:500px;" rel="popover" data-content="亲爱的领队，有了行程安排您的活动将一切尽在掌握！" data-original-title="好的计划是成功的一半"></textarea>
+					<textarea class="input-xlarge" name="schedule_tl" rows="6" style="width:500px;" rel="popover" data-content="亲爱的领队，有了行程安排您的活动将一切尽在掌握！<a data-toggle='modal' href='#editor'>弹出编辑&nbsp;&gt;&gt;</a>" data-original-title="好的计划是成功的一半"></textarea>
 				</div>
 			</div>
 			<div class="control-group">
@@ -218,5 +233,33 @@
 			</div>
 		</fieldset>
 	</form>
+	
+	<div id="editor" class="modal hide fade" style="width:700px;margin-left:-350px;">
+		<div class="modal-header">
+			<a class="close" data-dismiss="modal">×</a>
+			<h3>行成安排</h3>
+		</div>
+		<div class="modal-body">
+			<div class="tabbable tabs-right">
+				<ul class="nav nav-tabs">
+					<li class="active"><a href="#r1" data-toggle="tab">第1天</a></li>
+				</ul>
+				<div class="tab-content" style="margin-left:0px;width:460px;">
+					<div class="tab-pane active" id="r1">
+						<textarea rows=20 class="span7" >第1天</textarea>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<script language="javascript" type="text/javascript">
+		$(".event-form input[name='day']").on("change", function() {
+			var day = parseInt($(this).val());
+			for (var i=2; i<day+1; i++) {
+				$("#editor .nav-tabs").append('<li class=""><a href="#r'+i+'" data-toggle="tab">第'+i+'天</a></li>');
+				$("#editor .tab-content").append('<div class="tab-pane" id="r'+i+'"><textarea rows=20 class="span7" >第'+i+'天</textarea></div>');
+			}
+		});
+	</script>
 {% end %}
 {% block bodyright %}{% end %}
