--- a/htmls/frame.html
+++ b/htmls/frame.html
@@ -12,8 +12,6 @@
 		<script src="{{ static_url('js/jquery.cookie.js') }}" type="text/javascript"></script>
 		<script src="{{ static_url('js/utility.js') }}" type="text/javascript"></script>
 		<script src="{{ static_url('js/jquery.lazyload.js') }}" type="text/javascript"></script>
-		<script src="{{ static_url('js/jquery.noty.js') }}" type="text/javascript"></script>
-		<script src="{{ static_url('js/alert.js') }}" type="text/javascript"></script>
 		<script language="javascript" type="text/javascript">
 			$(document).ready(function() {
 				//$("img").lazyload({});
@@ -25,7 +23,6 @@
 		<link href="{{ static_url('css/mybootstrap.css') }}" rel="stylesheet">
 		<link href="{{ static_url('css/doc.css') }}" rel="stylesheet">
 		<link href="{{ static_url('css/ie6.css') }}" rel="stylesheet">
-		<link href="{{ static_url('css/jquery.noty.css') }}" rel="stylesheet">
 		<link rel="shortcut icon" href="./favicon.ico">
 		{% block static %}{% end %}
 	</head>
@@ -50,19 +47,28 @@
 						</ul>
 						<ul class="nav user_log pull-right">
 							{% if current_user %}
-							<li><a href="" style="display:none;">私信</a></li>
+							<li class="dropdown" style="display:none;">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="badge">5</span></a>
+								<ul class="nav-list dropdown-menu" style="min-width:80px;">
+									<li><a href="/alert/error/"><span class="label label-important">+1</span>&nbsp;&nbsp;&nbsp;&nbsp;关于二手</a></li>
+									<li><a href="/alert/warning/"><span class="label label-warning">+1</span>&nbsp;&nbsp;&nbsp;&nbsp;关于微博</a></li>
+									<li><a href="/alert/success/"><span class="label label-success">+1</span>&nbsp;&nbsp;&nbsp;&nbsp;关于活动</a></li>
+									<li><a href="/alert/info/"><span class="label label-info">+1</span>&nbsp;&nbsp;&nbsp;&nbsp;关于游记</a></li>
+									<li><a href="/alert/inverse/"><i><span class="label label-inverse">+1</span>&nbsp;&nbsp;&nbsp;&nbsp;关于忽略</i></a></li>
+								</ul>
+							</li>
 							<li class="divider-vertical"></li>
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 									<img src="/image/avatar/{{ uid }}_30" style="width:24px;height:24px;" width=24 height=24 />&nbsp{{ current_user }}<b class="caret"></b>
 								</a>
 								<ul class="nav-list dropdown-menu">
-									<li class="hide"><a href="/account/profile/"><i class="icon-user"></i> &nbsp&nbsp&nbsp&nbsp个人主页</a></li>
-									<li><a href="/account/setting/"><i class="icon-cog"></i>&nbsp&nbsp&nbsp&nbsp 账户设置</a></li>
-									<li class="hide"><a href="/account/plugin/"><i class="icon-pencil"></i> &nbsp&nbsp&nbsp&nbsp订制应用</a></li>
-									<li class="hide"><a href="/account/carte/"><i class="icon-book"></i> &nbsp&nbsp&nbsp&nbsp户外名片</a></li>
+									<li><a href="/account/profile/"><i class="icon-user"></i>&nbsp;&nbsp;&nbsp;&nbsp;个人主页</a></li>
+									<li><a href="/account/setting/"><i class="icon-cog"></i>&nbsp;&nbsp;&nbsp;&nbsp;账户设置</a></li>
+									<li class="hide"><a href="/account/plugin/"><i class="icon-pencil"></i>&nbsp;&nbsp;&nbsp;&nbsp;订制应用</a></li>
+									<li class="hide"><a href="/account/carte/"><i class="icon-book"></i>&nbsp;&nbsp;&nbsp;&nbsp;户外名片</a></li>
 									<li class="divider"></li>
-									<li><a onclick="logout(this);return false;"><i class="icon-off"></i> &nbsp&nbsp&nbsp&nbsp退出</a></li>
+									<li><a onclick="logout(this);return false;"><i class="icon-off"></i>&nbsp;&nbsp;&nbsp;&nbsp;退出</a></li>
 								</ul>
 							</li>
 							{% else %}
