--- a/htmls/frame.html
+++ b/htmls/frame.html
@@ -43,6 +43,7 @@
 							<li id="nav-event" class=""><a href="/event/">活动</a></li>
 							<li id="nav-note" class=""><a href="/note/">游记</a></li>
 							<li id="nav-tag" class=""><a href="/tag/">标签</a></li>
+							<li id="nav-album" class=""><a href="/album/">相册</a></li>
 							<li id="nav-second" style="display:none;"><a href="/second/">二手</a></li>
 						</ul>
 						<ul class="nav user_log pull-right">
