--- a/htmls/frame.html
+++ b/htmls/frame.html
@@ -100,8 +100,8 @@
 			<footer class="footer">
 				{% block foot %}{% end %}
 				<p class="pull-right"><a href="">回到顶部</a></p>
-				<p>七三工作室 ( QQ:149964633 Q群:205994608 )</p>
-				<p></p>
+				<p class="pull-left"><a href="/contact/">&nbsp;&nbsp;联系我们</a></p>
+				<p class="pull-left"><a href="/sitemap/">&nbsp;&nbsp;网站地图</a></p>
 			</footer>
 		</div><!-- /container -->
 		<script type="text/javascript" src="{{ static_url('js/bs/widgets.js') }}"></script>
