--- a/htmls/check/event.html
+++ b/htmls/check/event.html
@@ -95,6 +95,7 @@
 		<li class="active"><a>活动审核</a></li>
 		<li><a href="/check/tag/">标签管理</a></li>
 		<li><a href="/check/note/">游记管理</a></li>
+		{% if verify(pm, 0x01) %}<li><a href="/check/guide/">导购管理</a></li>{% end %}
 		<li style="display:none;"><a href="/check/people/">驴友审核</a></li>
 		<li style="display:none;"><a href="/check/weibo/">微博审核</a></li>
 		<li style="display:none;"><a href="/check/club/">俱乐部审核</a></li>
