--- a/htmls/event/list.html
+++ b/htmls/event/list.html
@@ -42,7 +42,7 @@
 			{% end %}
 		</tbody>
 	</table>
-	{% module Template("util/pagination.html", pagination=pagination, url='/event/') %}
+	{% module Template("util/pagination.html", pagination=pagination, url='/event/', param='') %}
 {% end %}
 {% block bodyright %}
 	<a class="btn btn-large btn-success" onclick="if (!$.cookie('uid')) {$('#login').modal();return false;}return true;" href="/event/puba/">发布活动</a>
